Bug 822053 - Nested balancing column sets restriction shouldn't affect non-balancing column sets.  r=roc